--- a/testApp/templates/modelEdit.html
+++ b/testApp/templates/modelEdit.html
@@ -1,17 +1,11 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-	<title>Model Edit Screen</title>
-    <meta charset="UTF-8">
-    {% load static %}
-	<link rel="stylesheet" type="text/css" href="{% static 'css/util.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'css/modelEdit.css' %}">
-<!--===============================================================================================-->
+﻿{% extends 'indexLogged.html' %}
+
+{% block modelEdit %}
+{% load static %}
+
 </head>
 <body>
-	<div class="limiter">
-		<div class="container-login100" style="background-image: url('{% static 'images/bg-01.jpg' %}');">
-			<div class="wrap-login100">
+	
 				<form class="login100-form validate-form">
                     {{ modules|json_script:"db-modules" }}
                     {{ substrates|json_script:"db-substrates" }}
@@ -33,13 +27,9 @@
                     </div>
                     </div>
                 </form>
-			</div>
-		</div>
-	</div>
-
-
 	<div id="dropDownSelect1"></div>
 	<script src="{% static 'js/modelEdit.js' %}"></script>
 
 </body>
 </html>
+{% endblock %}
