fixing url issue

--- a/testApp/static/css/modelEdit.css
+++ b/testApp/static/css/modelEdit.css
@@ -40,7 +40,7 @@
 body, html {
     height: 100%;
     font-family: Poppins-Regular, sans-serif;
-    color: white;
+    color: black;
 }
 
 /*---------------------------------------------*/
