--- a/testApp/templates/modelEdit.html
+++ b/testApp/templates/modelEdit.html
@@ -11,7 +11,7 @@
         {{ products|json_script:"db-products" }}
         {{ model_num|json_script:"modelNum"}}
         <div class="flex-horiz">
-            <div style="width: 800px; height: 800px; overflow: hidden">
+            <div id="modelEditDiv"style="width: 800px; height: 800px; overflow: hidden">
                 <canvas id="modelEditCanvas" height="10000" width="800" ></canvas>
                 <a href="{% url 'moduleEdit' model=1 module=2 %}" id="new-reaction">
                     <button>
