--- a/testApp/templates/moduleEdit.html
+++ b/testApp/templates/moduleEdit.html
@@ -177,7 +177,9 @@
 												<input type="radio" name="reversibleChoice" onchange="onRadioReverseChange()" value="Irreversible" checked>
 												<span class="checkmark"></span>
 											</label>
-											<button type="submit" class="saveReaction" id="saveReaction">CHECK</button>
+											<button type="button" id="backBtn" class="backBtn">BACK</button>
+
+											<button type="submit" class="saveReaction" id="saveReaction">SAVE</button>
 										</form>
 										</div>
 											<button type="button" class="createReaction" id="createReaction">CREATE</button>
