--- a/testApp/static/css/moduleEdit.css
+++ b/testApp/static/css/moduleEdit.css
@@ -11,35 +11,11 @@ button {
     background: transparent;
 }
 
-.container-login100 {
-    width: 100%;
-    min-height: 100vh;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    padding: 15px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: relative;
-    z-index: 1;
-}
-
-.container-login100::before {
-    content: "";
-    display: block;
+.viewAndCreateReaction {
     position: absolute;
-    z-index: -1;
-    width: 100%;
     height: 100%;
-    top: 0;
-    left: 0;
-    background-color: rgba(255,255,255,0.9);
+    width: 100%;
+    padding: 2%;
 }
 
 .wrap-login100 {
@@ -55,16 +31,27 @@ button {
     align-content:center;
 }
 #subsContainer, #prodsContainer, #enzsContainer{
-  width: 30%;
+  width: 100%; /* makes them stack */
   border-radius: 5%;
+  height: 170px;
+  border: 5px;
+  border-style: solid;
+  border-color:  #fefefe;
   display: inline-block;
   overflow: hidden;
 }
 #prodsLabel, #enzsLabel, #subsLabel{
   display: inline-block;
-  font-size: 18px;
+  font-size: 25px;
   color: white;
+  padding-left: 1%;
 }
+.subs, .enzs, .prods {
+    width: 100%;
+    padding-left: 1%;
+    color: rgb(240,234)
+}
+
 ul#products{
     overflow-y: scroll;
     color: white;
@@ -107,7 +94,8 @@ ul#substrates{
     background-color: #4CAF50;
     border: 1px solid white;
     color: white;
-    width: 18%;
+    width: 39.4%;
+
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -117,107 +105,65 @@ ul#substrates{
     margin-top: 2%;
 }
 
-/* #weightSlider {
-  color: white;
-  width: 40%;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  padding: 0 0 0 0;
-} */
-
 .createReaction {
-  border: 1px solid white;
-  background-color: #4CAF50; /* Green */
+    border: 1px solid white;
+    background-color: #4CAF50; /* Green */
+    height: 57.8px;
+    margin-top: 3%;
     color: white;
+    width: 16.15%;
     padding: 2% 2% 2% 2%;
     text-align: center;
+    line-height: 50%;
     text-decoration: none;
     display: inline-block;
+    margin-left: 1%;
     font-size: 16px;
-    margin-right: 2%;
-    margin-top: 2%;
+    margin-right: 1.5%;
+    
+    
+}
+.saveModuleForm {
+    float: left;
+    padding-left: 15px;
+    height: 550px;
+    width: 34.85%;
+    
 }
 
 .saveReaction {
-  border: 1px solid white;
-  background-color: #4CAF50; /* Green */
+    border: 1px solid white;
+    background-color: #4CAF50; /* Green */
     color: white;
     padding: 2% 2% 2% 2%;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin-right: 2%;
+    margin-right: .5%;
     margin-top: 2%;
 }
 
 .clearReaction {
-  border: 1px solid white;
-  background-color: #4CAF50; /* Green */
+    border: 1px solid white;
+    background-color: #4CAF50; /* Green */
     color: white;
     padding: 2% 2% 2% 2%;
+    width: 16.15%;
+    height: 57.8px;
+    margin-top: 3%;
     text-align: center;
+    line-height: 50%;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin-right: 2%;
-    margin-top: 2%;
+    
 }
 
 .createReaction, .saveReaction, .clearReaction{
   float: left;
   display: inline-block;
 }
-
-/* .createReaction, .weight{
-  float: left;
-  display: inline-block;
-} */
-
-
-/* .weight {
-  border: 1px solid white;
-  background-color: #4CAF50;
-  color: white;
-  padding-top: 2%;
-  padding-bottom: 2%;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-} */
-
-/* .weightLabel{
-  width: 20%;
-  color: white;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  padding: 0 0 0 0;
-} */
-
-/* .weightValue {
-  border: none;
-  color: black;
-  width: 10%;
-  text-align: center;
-  text-decoration: none;
-  font-size: 16px;
-  padding: 0 0 0 0;
-} */
-
-/* .enterWeight {
-  border: 1px solid white;
-  color: white;
-  width: 20%;
-  text-align: center;
-  text-decoration: none;
-  font-size: 16px;
-  padding: 0 0 0 0;
-} */
 
 .editToolbar {
     display: flex;
@@ -242,6 +188,8 @@ ul#substrates{
 #imageCanvas {
     background-color: white;
     border-radius: 5%;
+    float: left;
+    
 }
 
 /* The Modal (background) */
