--- a/testApp/templates/modelEdit.html
+++ b/testApp/templates/modelEdit.html
@@ -1,46 +1,32 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-	<title>Model Edit Screen</title>
-    <meta charset="UTF-8">
-    {% load static %}
-	<link rel="stylesheet" type="text/css" href="{% static 'css/util.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'css/modelEdit.css' %}">
-<!--===============================================================================================-->
+﻿{% extends 'indexLogged.html' %}
+
+{% block modelEdit %}
+{% load static %}
+
 </head>
 <body>
-	<div class="limiter">
-		<div class="container-login100" style="background-image: url('{% static 'images/bg-01.jpg' %}');">
-			<div class="wrap-login100">
-				<form class="login100-form validate-form">
-                    {{ modules|json_script:"db-modules" }}
-                    {{ substrates|json_script:"db-substrates" }}
-                    {{ products|json_script:"db-products" }}
-                    {{ model_num|json_script:"modelNum"}}
-                    <div class="flex-horiz">
-                        <div>
-                            <a href="{% url 'moduleEdit' model=1 module=2 %}" id="link-to-module">
-                                <canvas id="modelEditCanvas" height="800" width="800"></canvas>
-                            </a>
-                            <a href="{% url 'moduleEdit' model=1 module=2 %}" id="new-reaction">
-                                <button>
-                                    Create New Reaction
-                                </button>
-                            </a>
-                        </div>
-                        <div class="flex-sliders" id="slider-holder">
-                            <h3 style="padding:10px 20px">Variables</h3>
-                        </div>
-                    </div>
-                    </div>
-                </form>
-			</div>
-		</div>
-	</div>
-
-
+	<form class="login100-form validate-form">
+        {{ modules|json_script:"db-modules" }}
+        {{ substrates|json_script:"db-substrates" }}
+        {{ products|json_script:"db-products" }}
+        {{ model_num|json_script:"modelNum"}}
+        <div class="flex-horiz">
+            <div id="modelEditDiv"style="width: 800px; height: 800px; overflow: hidden">
+                <canvas id="modelEditCanvas" height="10000" width="800" ></canvas>
+                <a href="{% url 'moduleEdit' model=1 module=2 %}" id="new-reaction">
+                    <button>
+                        Create New Reaction
+                    </button>
+                </a>
+            </div>
+            <div class="flex-sliders" id="slider-holder">
+                <h3 style="padding:10px 20px">Variables</h3>
+            </div>
+        </div>
+        </div>
+    </form>
 	<div id="dropDownSelect1"></div>
 	<script src="{% static 'js/modelEdit.js' %}"></script>
-
 </body>
 </html>
+{% endblock %}
